
    MAPREDUCE-6285. ClientServiceDelegate should not retry upon
    AuthenticationException. (Jonathan Eagles via ozawa)

    MAPREDUCE-6303. Read timeout when retrying a fetch error can be fatal 
    to a reducer. (Jason Lowe via junping_du)

Release 2.6.2 - UNRELEASED

 INCOMPATIBLE CHANGES

 NEW FEATURES

 IMPROVEMENTS

 OPTIMIZATIONS

 BUG FIXES

   MAPREDUCE-6454. Fixed MapReduce to modify HADOOP_CLASSPATH to have distributed
   cache files so that child processes running hadoop scripts can access these
   files. (Junping Du via vinodkv)

Release 2.6.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6237. Multiple mappers with DBInputFormat don't work because of
    reusing conections. (Kannan Rajah via ozawa)

Release 2.6.0 - 2014-11-18

  INCOMPATIBLE CHANGES

  NEW FEATURES
    MAPREDUCE-5910. Make MR AM resync with RM in case of work-preserving
    RM-restart. Contributed by Rohith

    MAPREDUCE-5933. Enabled MR AM to post history events to the timeline server.
    (Robert Kanter via zjshen)

  IMPROVEMENTS

    MAPREDUCE-5971. Move the default options for distcp -p to
    DistCpOptionSwitch. (clamb via wang)

    MAPREDUCE-5963. ShuffleHandler DB schema should be versioned with
    compatible/incompatible changes (Junping Du via jlowe)

    MAPREDUCE-6019. MapReduce changes for exposing YARN/MR endpoints on multiple
    interfaces. (Craig Welch, Milan Potocnik, Arpit Agarwal via xgong)

    MAPREDUCE-883. harchive: Document how to unarchive (Akira AJISAKA and
      Koji Noguchi via aw)

    MAPREDUCE-4791. Javadoc for KeyValueTextInputFormat should include default
      separator and how to change it (Akira AJISAKA via aw)

    MAPREDUCE-5906. Inconsistent configuration in property
      "mapreduce.reduce.shuffle.input.buffer.percent" (Akira AJISAKA via aw)

    MAPREDUCE-5974. Allow specifying multiple MapOutputCollectors with 
    fallback. (Todd Lipcon via kasha)
